2001-02-13  Dirk Mueller <dmuell@gmx.net>
            Phil Edwards  <pme@sources.redhat.com>

	* include/backward/function.h:  Do not use rel_ops for older
	  headers either.
	* include/backward/pair.h:  Likewise.

2001-02-12  Mark Mitchell  <mark@codesourcery.com>

	* src/locale.cc: Remove bogus locale::id definitions.

2001-02-11  Gabriel Dos Reis  <gdr@merlin.codesourcery.com>

	* include/bits/std_valarray.h: #undef _DEFINE_LOGICAL_OPERATOR,
	not _DEFINE_VALARRAY_OPERATOR which is not existent.

	* include/bits/valarray_meta.h (_RefFunClos<>_RefRunClos): Fix
	thinko in member initialisation.

2001-02-11  Gabriel Dos Reis  <gdr@codesourcery.com>

	* include/bits/std_valarray.h(valarray<>::shift): Avoid
	comparaison between signed and unsigned integer types.
	(valarray<>::cshift): Reformat.

2001-02-11  Alexandre Oliva  <aoliva@redhat.com>

	* src/gen-num-limits.cc: Use sigsetjmp and siglongjmp if available.
	* mknumeric_limits: Compile it with -DHAVE_CONFIG_H.
	* configure.in: Test for sigsetjmp.
	* configure, config.h.in: Rebuilt.

2001-02-11  Gabriel Dos Reis  <gdr@codesourcery.com>

	* src/valarray-inst.cc (gslice::_Indexer::_Indexer): Don't flip 
	lengths and strides.
	(__gslice_to_index): Document.

2001-02-11  Gabriel Dos Reis  <gdr@codesourcery.com>

	* include/bits/char_traits.h char_traits<char>::int_type: Change
	to `int' to match 21.1.3.1/2.

	* testsuite/21_strings/char_traits-int_type.C: New test.

2001-02-10  Gabriel Dos Reis  <gdr@codesourcery.com>

	* testsuite/Makefile.am: New file.

2001-02-09  Nathan Sidwell  <nathan@codesourcery.com>

	* include/c_shadow/bits/std_cstdlib.h (lldiv_t): Fix typo.

2001-02-08  Loren J. Rittle  <ljrittle@acm.org>

        * src/locale-inst.cc (fill_n): Instantiate with size_t arguments.

2001-02-08  David Edelsohn  <edelsohn@gnu.org>

	* configure.target (aix4*): Remove extra set of brackets.

2001-02-07  Benjamin Kosnik  <bkoz@redhat.com>

	Clean up stdexcept.
	* include/bits/stringfwd.h: New file.