@@ -1,3 +1,8 @@
+2001-02-15  Gabriel Dos Reis  <gdr@codesourcery.com>
+
+	* testsuite/lib/libstdc++.exp(dg-test): Lift, temporarily, out of
+	dejagnu/dg.exp.  Adapt to log options used to run testcases.
+
 2001-02-13  Dirk Mueller <dmuell@gmx.net>
             Phil Edwards  <pme@sources.redhat.com>
 
